// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatRating concats stars, review score and review description 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        Object {
          "letterSpacing": 2,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      ★★★
    </Text>
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
     - 
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    8.6 Good Enough
  </Text>,
]
`;

exports[`formatRating omits the dash when review is missing 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        Object {
          "letterSpacing": 2,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      ★★★★★
    </Text>
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    
  </Text>,
]
`;

exports[`formatRating omits the dash when stars are missing 1`] = `
Array [
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        Object {
          "letterSpacing": 2,
        },
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      
    </Text>
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    
  </Text>,
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#171b1e",
          "fontFamily": "CircularPro-Book",
          "fontSize": 14,
          "fontWeight": "normal",
          "letterSpacing": -0.15,
        },
        undefined,
      ]
    }
  >
    8.6 Good Enough
  </Text>,
]
`;
